# shop-inventory

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config  config.example  deploy  deploy_update.sh  docker-cmd.sh  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  init.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml  rpi_build.yml
pi-gen-pantry/00-shop/: 00-packages  01-run.sh  01-setup.sh  02-run.sh  03-run.sh
pi-gen-pantry/00-shop/files/: nginx-shop-inventory.conf  requirements.txt  shop-inventory-socket.conf  shop-inventory.service  shop-wifi-setup.service
pi-gen/build-shop/: 03-install-service.sh
pi-gen/build-shop/00-packages/: 01-setup.sh
pi-gen/build-shop/files/: nginx-shop-inventory.conf  requirements.txt
scripts/: backup_db.py  setup.sh  shop-inventory.service
setup/: requirements.txt  setup.sh
shop-inventory/: .env.example  start.sh
shop-inventory/_core/: settings.py  signals.py  views.py  wsgi.py
shop-inventory/checkout/: admin.py  forms.py  models.py  urls.py  views.py
shop-inventory/inventory/: apps.py  barcode_gen.py  forms.py  models.py  urls.py  views.py
shop-inventory/tests/: url_tests.py
shop_inventory/: manage.py  pytest.ini  requirements.txt
shop_inventory/_core/: apps.py  asgi.py  models.py  settings.py  signals.py  urls.py  views.py
shop_inventory/checkout/: forms.py  models.py  urls.py  views.py
shop_inventory/core/: asgi.py  settings.py  signals.py  urls.py  views.py  wsgi.py
shop_inventory/homepage/: views.py
shop_inventory/inventory/: admin.py  barcode_gen.py  forms.py  models.py  signals.py  urls.py  views.py
shop_inventory/static/: checkoutstyle.css
shop_inventory/templates/: homepage.html
shop_inventory/users/: admin.py  models.py  signals.py
shop_inventory/website/: models.py  settings.py  urls.py
src/shop-inventory/: start.sh
stageCustom/00-shop/: 00-packages  01-run.sh  02-run.sh
website/checkout/: urls.py  views.py
website/homepage/: views.py
website/inventory/: admin.py  forms.py  models.py  urls.py  views.py
website/inventory_app/: settings.py  urls.py
website/polls/: admin.py
website/website/: models.py  settings.py  urls.py
(+215 files in other folders)
